--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <div class="menu"></div>
         <div class="menu"></div>
     </div>
-    <div class="header">
+    <header class="header">
         <img src="https://www.gstatic.com/youtube/img/promos/growth/a0518425715a2ee589c7eec7e54ce956556f9c191f1dfb2f7ca4e38f273c4872_244x112.png">
-    </div>
+    </header>
 </div>
 <div class ="nav-right flex-div">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTfo1R0blJ8QxV8Jiri8TZgbz_DYYTlsBckhDNTACsrw&s" id="Upload" width="50" height="50">
-    <img src="https://static.thenounproject.com/png/423443-200.png" id="More" width="50" height="50">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLFA3_qp1HlJYVnJTfRLEzG_-dxeAsxLIBryhRdQU&s" id="notification" width="50" height="50">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTfo1R0blJ8QxV8Jiri8TZgbz_DYYTlsBckhDNTACsrw&s" class="Upload" width="50" height="50">
+    <img src="https://static.thenounproject.com/png/423443-200.png" class="More" width="50" height="50">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLFA3_qp1HlJYVnJTfRLEzG_-dxeAsxLIBryhRdQU&s" class="notification" width="50" height="50">
     </div>
     <div class="container">
         <nav>
@@ -37,12 +37,12 @@
             </div>
         </nav>
     </div>
+    <section>
     <div class="nav-middle">
         <div class="search-box">
             <input type="text" placeholder="Search">
             <button type="submit"><img src="https://cdn-icons-png.flaticon.com/512/14/14373.png" width="30" height="30"> </button>
         </div>
-           
     </div>
     <div class="video-wrapper">
         <center><iframe src="https://www.youtube.com/embed/pslXdBRnO8k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
@@ -51,6 +51,7 @@
             <di>There is so much to discover and we'll do just that! Check it out... Enjoy. </di></p2>
             <p3>80 000 views 1 month ago</p3>
     </div>
+    </section>
     <div class="list container">
         <div class="vid-list">
             <a href=""><img src="https://i.ytimg.com/vi/uoS2CLMSIaI/hqdefault.jpg?sqp=-oaymwEcCNACELwBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLACi3XN1zaInmgoKxBFbs2NC1V0rw">Water Bomb Seoul KAI</a></div>
